// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Pruebas con GifGrid Debe mostrar items cuando se cargan las imágenes 1`] = `
<Fragment>
  <h3
    className="animate__animated animate__fadeIn"
  >
    Goku
  </h3>
  <div
    className="card-grid"
  >
    <GifGridItem
      id="ABC"
      key="ABC"
      title="Mock image"
      url="https://domain.com/image.png"
    />
  </div>
</Fragment>
`;

exports[`Pruebas con GifGrid Debe renderizar el componente correctamente 1`] = `
<Fragment>
  <h3
    className="animate__animated animate__fadeIn"
  >
    Goku
  </h3>
  <p
    className="animate__animated animate__flash"
  >
    Cargando...
  </p>
  <div
    className="card-grid"
  />
</Fragment>
`;
